[gd_scene load_steps=6 format=3 uid="uid://u1qyk1m1yco0"]

[ext_resource type="Script" path="res://Entities/Towers/BaseTower/BaseTower.gd" id="1_qn6n7"]
[ext_resource type="Texture2D" uid="uid://c6mdmcmvjs336" path="res://icon.svg" id="1_vx0cn"]
[ext_resource type="PackedScene" uid="uid://cs8y67w2tt7sd" path="res://Entities/Towers/BaseTower/TowerRange.tscn" id="2_fac3i"]
[ext_resource type="PackedScene" uid="uid://bx4r7imynksua" path="res://Entities/Towers/BaseTower/RadialTowerMenu.tscn" id="2_hr0f1"]
[ext_resource type="Texture2D" uid="uid://ctnhv3wt1ocbd" path="res://placeholder_5.png" id="3_33okv"]

[node name="BaseTower" type="StaticBody2D" node_paths=PackedStringArray("tower_selection_button", "tower_range_collider", "tower_range_visuals", "tower_sprite", "tower_collider", "bullet_spawn_point", "rotation_pivot")]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_qn6n7")
tower_selection_button = NodePath("RadialTowerSelection")
tower_range_collider = NodePath("TowerRange/Collider")
tower_range_visuals = NodePath("TowerRangeVisuals")
tower_sprite = NodePath("RotationPivot/Sprite")
tower_collider = NodePath("Collider")
bullet_spawn_point = NodePath("RotationPivot/BulletSpawnPoint")
rotation_pivot = NodePath("RotationPivot")

[node name="RadialTowerSelection" parent="." instance=ExtResource("2_hr0f1")]

[node name="TowerRange" parent="." node_paths=PackedStringArray("Tower") instance=ExtResource("2_fac3i")]
Tower = NodePath("..")

[node name="TowerRangeVisuals" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.27451)
texture = ExtResource("3_33okv")

[node name="RotationPivot" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="RotationPivot"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_vx0cn")

[node name="BulletSpawnPoint" type="Marker2D" parent="RotationPivot"]

[node name="Collider" type="CollisionShape2D" parent="."]

[node name="ShotDelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="RadialTowerSelection" to="." method="_on_tower_selection_pressed"]

[editable path="RadialTowerSelection"]
[editable path="TowerRange"]
